--- a/housing/index.html
+++ b/housing/index.html
@@ -32,26 +32,34 @@
     <script>
         // Housing data from CSV
         const housingData = {
-            0: "Neviriah",
-            6: "Elvor",
-            7: "GasLightatdawn",
-            8: "Koren",
-            12: "Sailer",
-            13: "Sensayy",
-            17: "Baelys",
-            21: "guest",
-            22: "Briar",
-            23: "Lionhart",
-            24: "Halfyy",
-            28: "Aex",
-            29: "Gwen",
-            31: "Diff",
-            32: "Kafka",
-            38: "Nobbel",
-            41: "Phate",
-            43: "Cirillie",
-            46: "Wacsnie",
-            50: "Sungli"
+            0: "Malfreyia / Fablewynd",
+            1: "Elëos",
+            3: "Tetani",
+            5: "Ath",
+            9: "JackInSights",
+            10: "Cóleth",
+            12: "Nathellis",
+            13: "Lazryn",
+            17: "DiscordianKitty / Zzof",
+            20: "Inine",
+            21: "Cwelanas",
+            23: "Lany",
+            24: "Entheras / Nultopia",
+            26: "Rico",
+            27: "Taleniel",
+            28: "Artemis",
+            30: "Kymchi",
+            31: "Evitel",
+            32: "Atlen",
+            35: "Vitiae",
+            36: "Pandacho",
+            39: "Patek",
+            41: "Immy",
+            44: "Thalnis",
+            46: "Epiphania",
+            48: "Hedning",
+            50: "Mysticbeard",
+            54: "Ellezanor"
         };
 
         // House plot positions loaded from external JSON file
