--- a/housing/index.html
+++ b/housing/index.html
@@ -51,9 +51,11 @@
             30: "Kymchi",
             31: "Evitel",
             32: "Atlen",
+            33: "Insinc",
             35: "Vitiae",
             36: "Pandacho",
             39: "Patek",
+            40: "Burrich / Burdend",
             41: "Immy",
             44: "Thalnis",
             46: "Epiphania",
