--- a/housing/index.html
+++ b/housing/index.html
@@ -116,7 +116,7 @@
                     // Add tooltip with buyer name
                     const tooltip = document.createElement('div');
                     tooltip.className = 'plot-info';
-                    tooltip.textContent = `Plot ${position.plotNumber}: ${interestedData[position.plotNumber]}`;
+                    tooltip.textContent = `Interested in plot ${position.plotNumber}: ${interestedData[position.plotNumber]}`;
                     plot.appendChild(tooltip); 
                 } else {
                     // Add tooltip for available plot
