--- a/housing/index.html
+++ b/housing/index.html
@@ -66,6 +66,7 @@
 
         const interestedData = {
             6: "Béa",
+            25: "Meztlcoatl",
             38: "Arc",
             22: "Kaldirk",
             37: "Kymchi, Bambi",
