--- a/housing/index.html
+++ b/housing/index.html
@@ -69,7 +69,7 @@
             25: "Meztlcoatl",
             38: "Arc",
             22: "Kaldirk",
-            37: "Kymchi, Bambi",
+            37: "Kymchi ?, Bambi",
             52: "Cloud"
         };
 
