--- a/housing/index.html
+++ b/housing/index.html
@@ -43,6 +43,7 @@
             12: "Nathellis",
             13: "Lazryn",
             14: "Mysticbeard",
+            16: "Evitel",
             17: "DiscordianKitty / Zzof",
             20: "Inine",
             21: "Cwelanas",
@@ -51,7 +52,6 @@
             26: "Rico",
             27: "Taleniel",
             30: "Kymchi",
-            31: "Evitel",
             32: "Atlen",
             35: "Vitiae",
             36: "Pandacho",
@@ -66,6 +66,7 @@
 
         const interestedData = {
             6: "Béa",
+            11: "Myff",
             25: "Meztlcoatl",
             38: "Arc",
             22: "Kaldirk",
