--- a/housing/index.html
+++ b/housing/index.html
@@ -51,11 +51,11 @@
             24: "Entheras / Nultopia",
             26: "Rico",
             27: "Taleniel",
-            30: "Kymchi",
             31: "Lany",
             32: "Atlen",
             35: "Vitiae",
             36: "Pandacho",
+            37: "Kymchi",
             40: "Burrich / Burdend",
             41: "Immy",
             43: "Patek",
@@ -70,7 +70,7 @@
             25: "Meztlcoatl",
             38: "Arc",
             22: "Kaldirk",
-            37: "Kymchi ?, Bambi",
+            30: "Bambi",
             52: "Cloud"
         };
 
