--- a/housing/index.html
+++ b/housing/index.html
@@ -71,7 +71,8 @@
             38: "Arc",
             22: "Kaldirk",
             30: "Bambi",
-            49: "Cloud"
+            49: "Cloud",
+            53: "Alymere"
         };
 
         // House plot positions loaded from external JSON file
