--- a/housing/index.html
+++ b/housing/index.html
@@ -70,6 +70,7 @@
             25: "Meztlcoatl",
             38: "Arc",
             22: "Kaldirk",
+            28: "Mystica",
             30: "Bambi",
             49: "Cloud",
             53: "Alymere"
