--- a/housing/index.html
+++ b/housing/index.html
@@ -73,6 +73,7 @@
             22: "Kaldirk",
             28: "Mystica",
             30: "Bambi",
+            33: "Roessler",
             49: "Cloud",
             53: "Alymere"
         };
