--- a/housing/index.html
+++ b/housing/index.html
@@ -74,6 +74,7 @@
             28: "Mystica",
             30: "Bambi",
             33: "Roessler",
+            46: "Alleri",
             49: "Cloud",
             53: "Alymere"
         };
