--- a/housing/index.html
+++ b/housing/index.html
@@ -68,6 +68,7 @@
             4: "Saevash",
             6: "Béa",
             11: "Myff",
+            18: "Llucyfae",
             25: "Meztlcoatl",
             38: "Arc",
             22: "Kaldirk",
