--- a/housing/index.html
+++ b/housing/index.html
@@ -54,7 +54,7 @@
             31: "Lany",
             32: "Atlen",
             35: "Vitiae",
-            36: "Pandacho",
+            36: "Pandacho: 1st shard, Mysticbeard 2nd shard",
             37: "Kymchi",
             40: "Burrich / Burdend",
             41: "Immy",
