--- a/housing/index.html
+++ b/housing/index.html
@@ -67,6 +67,7 @@
         const interestedData = {
             4: "Saevash",
             6: "Béa",
+            8: "Orm",
             11: "Myff",
             18: "Llucyfae",
             25: "Meztlcoatl",
