--- a/housing/index.html
+++ b/housing/index.html
@@ -69,6 +69,7 @@
             6: "Béa",
             8: "Orm",
             11: "Myff",
+            15: "Evarock",
             18: "Llucyfae",
             25: "Meztlcoatl",
             38: "Arc",
