--- a/housing/index.html
+++ b/housing/index.html
@@ -24,6 +24,10 @@
             <div class="legend-color occupied"></div>
             <span>Occupied</span>
         </div>
+        <div class="legend-item">
+            <div class="legend-color interested"></div>
+            <span>Someone's interested in it</span>
+        </div>
         <div style="margin-top: 10px; font-size: 10px; color: #ccc;">
             Press <strong>G</strong> to toggle grid
         </div>
