--- a/housing/index.html
+++ b/housing/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guild Housing Map</title>
+    <title>Guild Housing Maps</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="grid-overlay.css">
 </head>
 <body>
+    <div class="map-container">
+        <div class="map-background" id="mapBackground">
+            <!-- House plots will be dynamically positioned here -->
+        </div>
+    </div>
+
+    <div class="legend">
+        <h3>Legend</h3>
+        <div class="legend-item">
+            <div class="legend-color available"></div>
+            <span>Available</span>
+        </div>
+        <div class="legend-item">
+            <div class="legend-color occupied"></div>
+            <span>Occupied</span>
+        </div>
+        <div class="legend-item">
+            <div class="legend-color interested"></div>
+            <span>Someone's interested in it</span>
+        </div>
+        <div style="margin-top: 10px; font-size: 10px; color: #ccc;">
+            Press <strong>G</strong> to toggle grid
+        </div>
+    </div>
+
     <div class="map-container">
         <div class="map-background" id="mapBackground">
             <!-- House plots will be dynamically positioned here -->
