--- a/housing/index.html
+++ b/housing/index.html
@@ -152,7 +152,7 @@
                     // Add tooltip with buyer name
                     const tooltip = document.createElement('div');
                     tooltip.className = 'plot-info';
-                    tooltip.textContent = `Purchased ${position.plotNumber}: ${interestedData[position.plotNumber]}`;
+                    tooltip.textContent = `Purchased ${position.plotNumber}: ${purchasedData[position.plotNumber]}`;
                     plot.appendChild(tooltip); 
                 } else {
                     // Add tooltip for available plot
