--- a/housing/index.html
+++ b/housing/index.html
@@ -15,6 +15,7 @@
     </div>
 
     <div class="legend">
+        <h2>Subdivision 1</h2>
         <h3>Legend</h3>
         <div class="legend-item">
             <div class="legend-color available"></div>
