--- a/housing/index.html
+++ b/housing/index.html
@@ -87,6 +87,7 @@
             38: "Béafyre",
             39: "Korrelim",
             40: "Burrich / Shenwick",
+            41: "Jangrol",
             42: "Tissais",
             43: "Patek",
             44: "Thalnis",
@@ -98,6 +99,7 @@
             50: "Ikuska",
             51: "Tiareth",
             52: "Dalmasca",
+            53: "Darsuss",
             54: "Lárrý"
         };
 
