--- a/housing/index.html
+++ b/housing/index.html
@@ -59,6 +59,7 @@
             6: "Arcanaeus",
             7: "Artemis",
             8: "Loxille",
+            9: "Reyon",
             11: "Myffanwy",
             12: "Nathellis",
             13: "Lazryn",
